--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,20 @@
-!*/
-/runs/
-/train_process/
-/log/
+runs/
+train_process/
+log/
 **/__pycache__/
 **/.idea/
-/data/static/
-!/data/static/.gitkeep
-/data/images/
-/releases/
+*.jpg
+*.jpeg
+*.png
+data/images/
+releases/
 *.cache
 *.pth
 *.onnx
-/models/openvino_model/
-!/models/openvino_model/.gitkeep
+*.xml
+*.bin
+!/log
+/log/*
 !/log/class_id.json
 !requirements.txt
+
