--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+my_env/
 runs/
 **/train_process/
 **/__pycache__/
@@ -12,6 +13,7 @@ releases/
 *.onnx
 *.xml
 *.bin
+*.mapping
 !/assets
 !/assets/*
 /log/*
