--- a/Cfg.yaml
+++ b/Cfg.yaml
@@ -1,30 +1,17 @@
 base:
-  device: NVIDIA pytorch
+  device: CUDA
   env_path: ./my_env
-  platform: pc
-  pose_net: mv
-  size: 256x256
   view_mode: 2
 inference:
   IP: 203.135.98.31
-  model: micronet_m3
+  model: LSTM
   port: 37942
   source: assets/test.mp4
 train:
-  Normalized_matrix:
-  - - 0.485
-    - 0.456
-    - 0.406
-  - - 0.229
-    - 0.224
-    - 0.225
   batch_size: 4
   divide_present: 0.8
   epoch: 100
   gamma: 0.95
-  learn_rate: 0.001
   lr: 0.001
-  model: micronet_m3
-  show_mode: Simple
+  model: LSTM
   step_size: 1
-  write_process: true
